@@ -7,8 +7,12 @@ import org.apache.spark.sql.catalyst.ReflectionLock.SparkReflectionLock
 import com.datastax.driver.core.{TupleValue => DriverTupleValue}
 import com.datastax.spark.connector.types.NullableTypeConverter
 
-final case class TupleValue(values: Any*) extends ScalaGettableByIndexData {
+final case class TupleValue(values: Any*) extends ScalaGettableByIndexData with Product {
   override def columnValues = values.toIndexedSeq.map(_.asInstanceOf[AnyRef])
+
+  override def productArity: Int = columnValues.size
+
+  override def productElement(n: Int): Any = getRaw(n)
 }
 
 object TupleValue {
