@@ -1,3 +1,5 @@
+ * Fix support for C* Tuples in Dataframes (SPARKC-357)
+
 1.6.0 M2
  * Performance improvement: keyBy creates an RDD with CassandraPartitioner 
    so shuffling can be avoided in many cases, e.g. when keyBy is followed
